# wadutil64

./: .gitignore  CMakeLists.txt  Cargo.toml  Doom_64_compression_second_method_apart_from_the_jaguar_doom_method.c  LICENSE  README.md  decodes.c  decodes.cpp  decoding_methods.txt  doomdata.h  doomdef.h  doominfo.h  encodes.c  encodes.cpp  lzss_decoder.py  lzss_encoder.py  main.c  main.cpp  w_wad.c  w_wad.cpp  wadutil64_def.h
src/: build.rs  compression.rs  extract.rs  gfx.rs  inspect.rs  lib.rs  lumps.rs  main.rs  music.rs  remaster.rs  sound.rs  soundfont.rs  wad.rs
src/compression/: d64.rs  jaguar.rs  vadpcm.rs
