[package]
name = "wadutil64"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = "0.7.2"
binrw = "0.12.0"
bitflags = "2.3.2"
blake3 = "1.5.0"
bytemuck = { version = "1.13.1", features = ["extern_crate_alloc"] }
clap = { version = "4.3.3", features = ["derive"] }
claxon = "0.4.3"
ghakuf = { git = "https://github.com/thekovic/ghakuf" }
glob-match = "0.2.1"
hex-literal = "0.4.1"
indexmap = "1.9.3"
itertools = "0.11.0"
lodepng = { git = "https://github.com/thekovic/lodepng-rust", default-features = false, features = ["rust_backend"] }
log = "0.4.19"
nom = "7.1.3"
phf = { version = "0.11.2", features = ["macros"] }
pretty_env_logger = "0.5.0"
rgb = "0.8.36"
sha2 = "0.10.7"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[lib]

[[bin]]
name = "wadutil64"

[profile.release]
lto = true
strip = true
codegen-units = 1
